--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
           <img src="picture/lkpd.png" alt="skpd">
           <h3>LKPD</h3>
       </div>
-      <div class="item" onclick="window.location.href='https:t.me/+HJebInjt3VZmOTA1'">
+      <div class="item" onclick="window.location.href='https://t.me/+HJebInjt3VZmOTA1'">
           <img src="picture/capaian3.png" alt="Ruang Kita">
           <h3>Ruang Kita</h3>
       </div>
