--- a/capaian/materiajar.html
+++ b/capaian/materiajar.html
@@ -160,15 +160,15 @@
         <h1 style="font-size: 35px;">Teks</h1>
         <h2>Semester 1</h2>
         <div class="container">
-            <div class="item" onclick="window.location.href='https:67ef5569df9b637c6363083b--chimerical-tarsier-87d47c.netlify.app/'">
+            <div class="item" onclick="window.location.href='https://67ef5569df9b637c6363083b--chimerical-tarsier-87d47c.netlify.app/'">
                 <img src="../picture/eksponen.png" alt="Eksponen dan Logaritma">
                 <h3>Eksponen dan Logaritma</h3>
             </div>
-            <div class="item" onclick="window.location.href='https:graceful-pasca-f08ba9.netlify.app/'">
+            <div class="item" onclick="window.location.href='https://graceful-pasca-f08ba9.netlify.app/'">
                 <img src="../picture/Picture2.png" alt="Barisan dan Deret">
                 <h3>Barisan dan Deret</h3>
             </div>
-            <div class="item" onclick="window.location.href='https:67ee554681c45f5683e31bd5--cute-cactus-de1ec0.netlify.app/'">
+            <div class="item" onclick="window.location.href='https://67ee554681c45f5683e31bd5--cute-cactus-de1ec0.netlify.app/'">
                 <img src="../picture/Picture3.png" alt="Sistem Persamaan dan Ketidak Samaan">
                 <h3>Sistem Persamaan dan Ketidak Samaan Linear</h3>
             </div>
@@ -176,19 +176,19 @@
         <br>
         <h2>Semester 2</h2>
         <div class="container">
-            <div class="item" onclick="window.location.href='https:67f204471225c203bc6fa748--strong-genie-f19c10.netlify.app/'">
+            <div class="item" onclick="window.location.href='https://67f204471225c203bc6fa748--strong-genie-f19c10.netlify.app/'">
                 <img src="../picture/kuadrat.png" alt="fungsi kuadrat">
                 <h3>Persamaan dan fungsi kuadrat</h3>
             </div>
-            <div class="item" onclick="window.location.href='https:67f205ee393544d357befbee--fantastic-kataifi-2eb0a2.netlify.app/'">
+            <div class="item" onclick="window.location.href='https://67f205ee393544d357befbee--fantastic-kataifi-2eb0a2.netlify.app/'">
                 <img src="../picture/trigono.png" alt="trigonometri">
                 <h3>Trigonometri</h3>
             </div>
-            <div class="item" onclick="window.location.href='https:67ef6869fd31f5befbc9cf59--papaya-crisp-abe6de.netlify.app/'">
+            <div class="item" onclick="window.location.href='https://67ef6869fd31f5befbc9cf59--papaya-crisp-abe6de.netlify.app/'">
                 <img src="../picture/statis.png" alt="Statistika">
                 <h3>Statistika</h3>
             </div>
-            <div class="item" onclick="window.location.href='https:67f217d867495d10d3f971e2--creative-profiterole-99aa19.netlify.app/'">
+            <div class="item" onclick="window.location.href='https://67f217d867495d10d3f971e2--creative-profiterole-99aa19.netlify.app/'">
                 <img src="../picture/peluang.png" alt="Aturan pencacahan dan peluang">
                 <h3>Aturan pencacahan dan peluang</h3>
             </div>
