--- a/capaian/video.html
+++ b/capaian/video.html
@@ -160,15 +160,15 @@
         <h1 style="font-size: 35px;">Video</h1>
         <h2>Semester 1</h2>
         <div class="container">
-            <div class="item" onclick="window.location.href='https:youtube.com/playlist?list=PL8m0MlryCdk8MopKkQPYE0SimG0m5ZfPr&si=Dkn1FnTcR4SZ_YrJ'">
+            <div class="item" onclick="window.location.href='https://youtube.com/playlist?list=PL8m0MlryCdk8MopKkQPYE0SimG0m5ZfPr&si=Dkn1FnTcR4SZ_YrJ'">
                 <img src="../picture/eksponen.png" alt="Eksponen dan Logaritma">
                 <h3>Eksponen dan Logaritma</h3>
             </div>
-            <div class="item" onclick="window.location.href='https:youtube.com/playlist?list=PLmOc36chIAoiVea470Atz3MgnbNPcDkfA&si=Efw-cXEjgX214FXq'">
+            <div class="item" onclick="window.location.href='https://youtube.com/playlist?list=PLmOc36chIAoiVea470Atz3MgnbNPcDkfA&si=Efw-cXEjgX214FXq'">
                 <img src="../picture/Picture2.png" alt="Barisan dan Deret">
                 <h3>Barisan dan Deret</h3>
             </div>
-            <div class="item" onclick="window.location.href='https:youtu.be/uC78QtDvVXY?si=nRwFNIHLrwSBLInK'">
+            <div class="item" onclick="window.location.href='https://youtu.be/uC78QtDvVXY?si=nRwFNIHLrwSBLInK'">
                 <img src="../picture/Picture3.png" alt="Sistem Persamaan dan Ketidak Samaan">
                 <h3>Sistem Persamaan dan Ketidak Samaan Linear</h3>
             </div>
@@ -176,19 +176,19 @@
         <br>
         <h2>Semester 2</h2>
         <div class="container">
-            <div class="item" onclick="window.location.href='https:youtube.com/playlist?list=PLmOc36chIAoiBuAob0G1-8pzhkykvgSVh&si=PnieJNLTMmGV75LU'">
+            <div class="item" onclick="window.location.href='https://youtube.com/playlist?list=PLmOc36chIAoiBuAob0G1-8pzhkykvgSVh&si=PnieJNLTMmGV75LU'">
                 <img src="../picture/kuadrat.png" alt="fungsi kuadrat">
                 <h3>Persamaan dan fungsi kuadrat</h3>
             </div>
-            <div class="item" onclick="window.location.href='https:youtu.be/TDKf52f_12A?si=EGwY5T1hV3nv8iT6'">
+            <div class="item" onclick="window.location.href='https://youtu.be/TDKf52f_12A?si=EGwY5T1hV3nv8iT6'">
                 <img src="../picture/trigono.png" alt="trigonometri">
                 <h3>Trigonometri</h3>
             </div>
-            <div class="item" onclick="window.location.href='https:youtube.com/playlist?list=PLovW1TU0Q47ztujODuzjIFP2tFppmHqEl&si=nqA3qY23EPsjpXFG'">
+            <div class="item" onclick="window.location.href='https://youtube.com/playlist?list=PLovW1TU0Q47ztujODuzjIFP2tFppmHqEl&si=nqA3qY23EPsjpXFG'">
                 <img src="../picture/statis.png" alt="Statistika">
                 <h3>Statistika</h3>
             </div>
-            <div class="item" onclick="window.location.href='https:youtube.com/playlist?list=PLnJh4jwFF59pjHmDO0RIf-KmhoobKL6u4&si=2KU-XGzazRenPOOd'">
+            <div class="item" onclick="window.location.href='https://youtube.com/playlist?list=PLnJh4jwFF59pjHmDO0RIf-KmhoobKL6u4&si=2KU-XGzazRenPOOd'">
                 <img src="../picture/peluang.png" alt="Aturan pencacahan dan peluang">
                 <h3>Aturan pencacahan dan peluang</h3>
             </div>
