--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 <section class="satu" id="satu">
   <div class="container">
     <div class="header"><img class="logo" src="picture/logo.png" alt=""> SMA NEGERI 1 KEDIRI</div>
-    <div class="title">SELAMAT DATANG DI MATH DIGITAL</div>
+    <div class="title">SELAMAT DATANG <br>DI MATH DIGITAL</div>
     <div class="subtitle">Platform Digital Manajemen Math Terpadu</div>
     <div class="gmbr">
       <img class="math" src="picture/math.png" alt="">
