--- a/capaian/lkpd.html
+++ b/capaian/lkpd.html
@@ -86,15 +86,15 @@
         <h1 style="font-size: 35px;">LKPD</h1>
         <h2>Semester 1</h2>
         <div class="container">
-            <div class="item" onclick="window.location.href='https:heyzine.com/flip-book/6f884ffa51.html'">
+            <div class="item" onclick="window.location.href='https://heyzine.com/flip-book/6f884ffa51.html'">
                 <img src="../picture/lkpd_eksponen.png" alt="Eksponen dan Logaritma">
                 <h3>Eksponen dan Logaritma</h3>
             </div>
-            <div class="item" onclick="window.location.href='https:heyzine.com/flip-book/933468a2ca.html'">
+            <div class="item" onclick="window.location.href='https://heyzine.com/flip-book/933468a2ca.html'">
                 <img src="../picture/lkpd_barisan.png" alt="Barisan dan Deret">
                 <h3>Barisan dan Deret</h3>
             </div>
-            <div class="item" onclick="window.location.href='https:heyzine.com/flip-book/84544474b2.html'">
+            <div class="item" onclick="window.location.href='https://heyzine.com/flip-book/84544474b2.html'">
                 <img src="../picture/lkpd_persamaan.png" alt="Sistem Persamaan dan Ketidak Samaan">
                 <h3>Sistem Persamaan dan Ketidak Samaan Linear</h3>
             </div>
@@ -102,19 +102,19 @@
         <br>
         <h2>Semester 2</h2>
         <div class="container">
-            <div class="item" onclick="window.location.href='https:heyzine.com/flip-book/5c2a910e6f.html'">
+            <div class="item" onclick="window.location.href='https://heyzine.com/flip-book/5c2a910e6f.html'">
                 <img src="../picture/lkpd_fungsi.png" alt="fungsi kuadrat">
                 <h3>Persamaan dan fungsi kuadrat</h3>
             </div>
-            <div class="item" onclick="window.location.href='https:heyzine.com/flip-book/4938f6538d.html'">
+            <div class="item" onclick="window.location.href='https://heyzine.com/flip-book/4938f6538d.html'">
                 <img src="../picture/lkpd_trigono.png" alt="trigonometri">
                 <h3>Trigonometri</h3>
             </div>
-            <div class="item" onclick="window.location.href='https:heyzine.com/flip-book/165f62da0f.html'">
+            <div class="item" onclick="window.location.href='https://heyzine.com/flip-book/165f62da0f.html'">
                 <img src="../picture/lkpd_statistika.png" alt="Statistika">
                 <h3>Statistika</h3>
             </div>
-            <div class="item" onclick="window.location.href='https:heyzine.com/flip-book/3665dce9e6.html'">
+            <div class="item" onclick="window.location.href='https://heyzine.com/flip-book/3665dce9e6.html'">
                 <img src="../picture/lkpd_pencacahan.png" alt="Aturan pencacahan dan peluang">
                 <h3>Aturan pencacahan dan peluang</h3>
             </div>
