--- a/capaian/asesmen.html
+++ b/capaian/asesmen.html
@@ -147,7 +147,7 @@
     <a href="../index.html" class="back-button">← Kembali</a>
     <h2>Asesmen</h2>
     <form id="commentForm">
-      <textarea id="comment" placeholder="Tulis komentar..." required></textarea>
+      <textarea id="comment" placeholder="Hanya Tugas..." required></textarea>
       <button type="submit">Kirim</button>
     </form>
     <div id="commentList"></div>
